# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Linter.yml
brain_games/: brain_even.py  cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
