[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Package included 5 console mini games. Each game is given 3 attempts.
		 If you answer correctly 3 times, you win"
authors = ["Georgievsky <jespy.kz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jespy666/python-project-49.git"
classifiers = [
    "Topic :: Games/Entertainment"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
